refactor: 11기 Part 백필을 보완하고 learningType 제거